[project]
name = "ai-agents-langchain"
version = "0.1.0"
description = "LangGraph agents demo - DevOps and Outreach pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.2.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.1.2",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
]

[project.scripts]
ai-agents = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "langgraph-cli[inmem]>=0.4.7",
]
